# VisionGuide

./: .gitignore  README.md  mkdocs.yml  requirements.txt
assets/: GIT.emmx
cmakes/: .gitignore  main
cmakes/grammar/: .clang-format  CMakeLists.txt  main.cc
cmakes/grammar/libs/: hellolibrary.cc  hellolibrary.h
cmakes/optimization/: run.sh
cmakes/submodules/: CMakeLists.txt
cmakes/submodules/exec/: CMakeLists.txt  main.cc
cmakes/submodules/libs/: CMakeLists.txt
cmakes/submodules/libs/common/: CMakeLists.txt  common.cc  common.h  mm.h
cmakes/submodules/libs/ma/: CMakeLists.txt  helloma.cc  helloma.h
cmakes/submodules/libs/mb/: CMakeLists.txt  himb.cc  himb.h
docs/: index.md
docs/clang-format/: clion.md  generate.md  index.md
docs/cmake/: basic.md  crosscompile.md  index.md  install.md  opencv.md  optimization.md  submodule.md
docs/cplusplus/: C++标准.md  学习C++之路.md
docs/cplusplus/advanced/class/: static成员.md  基本类结构.md  复制和移动操作.md  嵌套类定义.md  成员函数概述.md  成员访问控制.md  显式默认和删除函数.md  构造器概述.md  析构器.md  类、结构体和共同体.md  类定义.md  结构体.md  继承.md
docs/cplusplus/advanced/reference/: lvalue和rvalue.md  引用概述.md  引用类型函数操作.md
docs/cplusplus/advanced/smart-pointer/: shared_ptr.md  unique_ptr.md  weak_ptr.md  使用原始指针还是智能指针.md  智能指针类型.md
docs/cplusplus/advanced/stl/: STL概述.md  [shuffle]随机重排列.md  array.md  find.md  for_each.md  map.md  queue.md  sort.md  stack.md  vector.md
docs/cplusplus/advanced/template/: 函数模板.md  模板和名称解析.md  模板概述.md
docs/cplusplus/faq/: ISO C++ forbids converting a string constant to char*.md  multiple-definition-of.md
docs/cplusplus/get-started/basic-concepts/: 临时对象.md  作用域.md  函数.md  初始化.md  声明和定义.md  头文件.md  常量.md  指针引用.md  数组.md  程序终止.md  类型别名设置.md  链接.md
docs/cplusplus/get-started/keywords/: cv限定符.md  enum.md  main.md  namespace.md  nullptr.md  size_t.md
docs/cplusplus/get-started/operator-overload/: 一元运算符重载.md  下标运算符重载.md  二元运算符重载.md  函数调用运算符重载.md  操作符重载概述.md  赋值运算符重载.md
docs/cplusplus/get-started/pointer-array/: const指针和volatile指针.md  二维数组和二级指针.md  原始指针.md  原始数组.md  指针名和数组名的区别.md  指针和数组.md  指针常量和常量指针.md  指针数组和数组指针.md  指针类型.md
docs/cplusplus/get-started/type-cast-deduce/: auto.md  decltype.md  void类型.md  基本类型.md  字符串类型.md  标准转换.md  现代类型转换.md  用户定义的类型转换.md  类型概述.md
docs/cplusplus/operate/: 计时.md
docs/gtest/: compile.md  index.md  primer.md  summary.md
docs/libjpeg/: index.md  ubuntu-compile.md
docs/matplotlib/: 3d绘图.md  y轴坐标错乱.md  中文乱码.md  图像读取-显示和保存.md  属性配置.md  引言.md  手动设置轴刻度间隔.md  折线图.md  指定轴取值范围以及显示轴刻度.md  散点图.md  矩阵显示.md  等高线图.md  绘图关键概念Figure和Axes.md  设置双Y轴.md  译-Pyplot教程.md  饼图.md
docs/mnn/: compile.md  convert.md  dataformat.md  imageprocess.md  index.md  infer.md  quantization.md
docs/numpy/: troubleshooting.md  元素累加.md  增加或者减少一维.md  提取数组中属于某一条件的数据.md  数据保存和加载.md  限制取值范围.md
docs/opencv/: index.md
docs/opencv/configure/: SSH-OpenCV-远程图像显示.md
docs/opencv/configure/3.4.2/: Contrib-源码安装.md  测试.md  源码安装.md
docs/opencv/configure/4.0.1/: 安装.md  测试.md  编译OpenCV4Android.md
docs/opencv/configure/4.1.0/: 安装.md  配置及测试.md
docs/opencv/configure/4.2.0/: 安装.md  配置及测试.md
docs/opencv/configure/4.4.0/: 安装.md
docs/opencv/configure/4.7.0/: INSTALL.md
docs/opencv/configure/python/: anaconda配置.md  opencv-python.md  pycharm.md
docs/opencv/draw/: fillPoly.md  line.md  rectangle.md  text.md  绘制中文字符.md
docs/opencv/process/advanced/: contour.md
docs/opencv/process/base/: Point_.md  Scalar_.md  cartToPolar.md  convertTo.md  copyMakeBorder.md  h264-mpeg4.md  normalize.md  threshold.md  vconcat-hconcat.md  仿射变换.md  保存图像数据为字节文件.md  单目标追踪.md  去除小黑点.md  对比度增强.md  运行时间统计.md  非局部均值去噪.md
docs/opencv/process/feature/: Understanding-Features.md  sift.md  特征匹配.md
docs/opencv/process/filter/: canny.md  filter2d.md  laplacian.md  scharr.md  sobel.md
docs/python/: error.md  troubleshooting.md
docs/python/grammar/: abc.md  around.md  collections-defaultdict.md  collections-deque.md  easydict.md  enumerate.md  f-strings.md  itertools-product.md  json.md  list.md  logging.md  monkey-patch.md  pprint.md  slice.md  tqdm.md  xml.md  xmltodict.md  yacs.md  模块和包.md  类操作.md  装饰器.md
docs/python/tool/: converage.md  fire.md  pip.md  pnno.md  pytest.md  requirements.md  setup.md  打包和分发Python程序.md
docs/pytorch/: error.md  index.md  troubleshooting.md
docs/pytorch/cuda/: benchmark.md  empty_cache.md  安装哪个版本的CUDA.md  指定哪张卡运行.md  监控显存使用.md
docs/pytorch/grammar/: AdaptiveMaxPool-AdaptiveAvgPool.md  AlexNet.md  LeNet5.md  clamp.md  conv-pool.md  hook-获取运行时中间层计算结果.md  index_fill.md  nonzero.md  onehot.md  precision.md  softmax.md  tensor.md  transpose-permute.md
docs/pytorch/tool/: visualize.md
docs/pytorch/train/: distributeddataparallel.md  为什么推荐使用static_dict方式保存模型.md  加载部分预训练模型.md  固定部分参数进行训练.md  查询模型参数总数.md  自定义损失函数.md  译-保存和加载模型.md
docs/stb/: index.md
docs/torchvision/: ImageFolder.md  concatdataset.md  ten-crops.md  加载数据集-批量以及转换操作.md  均值和方差.md  数据预处理.md  自定义数据集和预处理操作.md  自定义采样器.md  采样器.md
libjpeg/: .gitignore  CMakeLists.txt  main.cpp
py/: .gitignore
py/data_preprocessing/: __init__.py  color.py  compose.py  crop.py  erase.py  flip.py  resize.py  ten-crops.py
py/lr/: SmoothLabelCriterion.py  __init__.py  find_lr.py  find_wd.py  train_lr.py  train_wd.py  util.py
samples/GTestDemo/: .clang-format  .gitignore  CMakeLists.txt  gtest_main.cpp  gtest_two.cpp  main.cpp
samples/OpenCVDemo/: .clang-format  CMakeLists.txt  main.cpp
samples/plantuml/: class.puml  common.puml
stb/: .gitignore  CMakeLists.txt  main.cpp
