# CMake最小支持版本
cmake_minimum_required(VERSION 3.16)
# 工程名，指定版本号以及使用语言
project(hello VERSION 1.0.0 LANGUAGES C CXX)

# 指定C编译器和C++编译器使用版本
set(CMAKE_C_STANDARD ${CMAKE_C_STANDARD})
set(CMAKE_CXX_STANDARD 17)
MESSAGE(STATUS "CMAKE_C_STANDARD: ${CMAKE_C_STANDARD}")
MESSAGE(STATUS "CMAKE_CXX_STANDARD: ${CMAKE_CXX_STANDARD}")

# 配置编译器选项
# 设置C编译器
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe -std=c99")
# 设置C++编译器
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -std=c++17")
MESSAGE(STATUS "CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
MESSAGE(STATUS "CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")

# 配置编译器类型
#set(CMAKE_BUILD_TYPE Debug)
#set(CMAKE_BUILD_TYPE Release)
MESSAGE(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")

# 设置优化等级
#set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -O0")
#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -O0")
#set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O2")
#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
MESSAGE(STATUS "CMAKE_C_FLAGS_DEBUG: ${CMAKE_C_FLAGS_DEBUG}")
MESSAGE(STATUS "CMAKE_CXX_FLAGS_DEBUG: ${CMAKE_CXX_FLAGS_DEBUG}")
MESSAGE(STATUS "CMAKE_C_FLAGS_RELEASE: ${CMAKE_C_FLAGS_RELEASE}")
MESSAGE(STATUS "CMAKE_CXX_FLAGS_RELEASE: ${CMAKE_CXX_FLAGS_RELEASE}")

# 获取指定路径下所有信息
file(GLOB FILES . "*.cc")
MESSAGE(STATUS "FILES: ${FILES}")
# 递归获取
file(GLOB_RECURSE FILES_RECURSE . "*.cc" "*.txt")
MESSAGE(STATUS "FILES_RECURSE: ${FILES_RECURSE}")

add_executable(hello main.cc)