cmake_minimum_required(VERSION 3.16)
project(SubModules)

MESSAGE(STATUS "CMAKE_SYSTEM_PROCESSOR: ${CMAKE_SYSTEM_PROCESSOR}")

set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/install)
MESSAGE(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib/${CMAKE_SYSTEM_PROCESSOR}")
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

set(BUILD_COMMON COMMON)
set(BUILD_MA MA)
set(BUILD_MB MB)
set(BUILD_MAIN main)

MESSAGE(STATUS "=> BUILD ...")
add_subdirectory(libs)
add_subdirectory(tests)
add_subdirectory(exec)

MESSAGE(STATUS "=> INSTALL ...")
install(TARGETS ${BUILD_COMMON} ${BUILD_MA} ${BUILD_MB} ${BUILD_MAIN}
		RUNTIME DESTINATION bin
		LIBRARY DESTINATION lib/${CMAKE_SYSTEM_PROCESSOR}
		ARCHIVE DESTINATION lib
		PUBLIC_HEADER DESTINATION include
		)
