cmake_minimum_required(VERSION 3.16)
project(Common VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_C_STANDARD ${CMAKE_C_STANDARD})
set(CMAKE_CXX_STANDARD 17)
MESSAGE(STATUS "CMAKE_C_STANDARD: ${CMAKE_C_STANDARD}")
MESSAGE(STATUS "CMAKE_CXX_STANDARD: ${CMAKE_CXX_STANDARD}")

# 设置C++编译器
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe -std=c99")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -std=c++17")
MESSAGE(STATUS "CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
MESSAGE(STATUS "CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")

file(GLOB_RECURSE FILES_RECURSE . "*.cc")
MESSAGE(STATUS "FILES_RECURSE: ${FILES_RECURSE}")

MESSAGE(STATUS "BUILD_COMMON: ${BUILD_COMMON}")
add_library(${BUILD_COMMON} SHARED ${FILES_RECURSE})