cmake_minimum_required(VERSION 3.16)
project(Ma VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_C_STANDARD ${CMAKE_C_STANDARD})
set(CMAKE_CXX_STANDARD 17)
MESSAGE(STATUS "CMAKE_C_STANDARD: ${CMAKE_C_STANDARD}")
MESSAGE(STATUS "CMAKE_CXX_STANDARD: ${CMAKE_CXX_STANDARD}")

# 设置C++编译器
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe -std=c99")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -std=c++17")
MESSAGE(STATUS "CMAKE_C_FLAGS: ${CMAKE_C_FLAGS}")
MESSAGE(STATUS "CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")

file(GLOB_RECURSE FILES_RECURSE . "*.cc")
MESSAGE(STATUS "FILES_RECURSE: ${FILES_RECURSE}")

include_directories(../common)

MESSAGE(STATUS "BUILD_MA: ${BUILD_MA}")
add_library(${BUILD_MA} SHARED ${FILES_RECURSE})
set_target_properties(${BUILD_MA} PROPERTIES PUBLIC_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/helloma.h)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include FILES_MATCHING PATTERN "*.h")

